--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,6 +67,16 @@
 
   padding-top: 65px;
 
+  &__crop {
+    position: absolute;
+
+    width: 58%;
+    height: 100%;
+
+    top: 0;
+    right: 0;
+  }
+
   &__image {
     height: $height;
     position: absolute;
@@ -91,6 +101,18 @@
     top: 50%;
     transform: translateY(-55%);
     right: var(--horizontal-padding);
+  }
+
+  &__crop {
+    position: absolute;
+
+    width: min(540px, calc(50% - var(--horizontal-padding) - 15px));
+    height: 720px;
+
+    box-shadow: 0 55px 80px -20px #aaa;
+
+    bottom: 0;
+    left: var(--horizontal-padding);
   }
 
   &__image {
@@ -120,6 +142,18 @@
     top: 50%;
     transform: translateY(-10%);
     left: var(--horizontal-padding);
+  }
+
+  &__crop {
+    position: absolute;
+
+    z-index: 1;
+
+    width: min(540px, calc(50% - var(--horizontal-padding) - 15px));
+    height: 720px;
+
+    bottom: -80px;
+    right: var(--horizontal-padding);
   }
 
   &__image {
@@ -153,40 +187,6 @@
 
 .crop {
   overflow: hidden;
-
-  &_variant_one {
-    position: absolute;
-
-    width: 58%;
-    height: 100%;
-
-    top: 0;
-    right: 0;
-  }
-
-  &_variant_two {
-    position: absolute;
-
-    width: min(540px, calc(50% - var(--horizontal-padding) - 15px));
-    height: 720px;
-
-    box-shadow: 0 55px 80px -20px #aaa;
-
-    bottom: 0;
-    left: var(--horizontal-padding);
-  }
-
-  &_variant_three {
-    position: absolute;
-
-    z-index: 1;
-
-    width: min(540px, calc(50% - var(--horizontal-padding) - 15px));
-    height: 720px;
-
-    bottom: -80px;
-    right: var(--horizontal-padding);
-  }
 }
 
 .footer {
@@ -295,7 +295,7 @@
 
   &_size_small > &__heading {
     width: 16ch;
-    margin-bottom: 27px;
+    margin-bottom: 6px;
   }
 
   &_size_small > &__body {
@@ -304,7 +304,7 @@
 
   &_size_large > &__heading {
     width: fit-content;
-    margin-bottom: 6px;
+    margin-bottom: 27px;
   }
 
   &_size_large > &__body {
