--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,8 @@
   --cod-gray: #111111;
   --ebony-clay: #242b37;
   --shuttle-gray: #5c6779;
+
+  background: #aaa;
 }
 
 .body {
@@ -52,6 +54,8 @@
 }
 
 .section {
+  background: white;
+
   position: relative;
 
   padding: 0 var(--horizontal-padding);
@@ -251,6 +255,8 @@
   align-items: center;
   justify-content: space-between;
 
+  overflow: hidden;
+
   &__container {
     display: flex;
 
@@ -262,6 +268,10 @@
   }
 
   &__image {
+    position: relative;
+
+    z-index: 1;
+
     width: 540px;
     height: auto;
 
@@ -283,6 +293,8 @@
     height: auto;
 
     position: absolute;
+
+    z-index: 2;
 
     top: 122px;
     left: calc(var(--horizontal-padding) - 40px);
@@ -310,10 +322,49 @@
 
     border-bottom: 1px solid var(--beaver);
 
-    z-index: -1;
+    z-index: 0;
 
     top: calc(50% - 1px);
     left: -32px;
+  }
+}
+
+.cta {
+  height: 240px;
+
+  padding: 0;
+
+  // padding: var(--horizontal-padding);
+
+  &__crop {
+    position: absolute;
+
+    width: 100%;
+    height: 240px;
+  }
+
+  &__image {
+    width: auto;
+    height: 100%;
+  }
+
+  display: flex;
+
+  justify-content: space-between;
+  align-items: center;
+
+  &__heading,
+  &__button {
+    position: relative;
+    z-index: 1;
+  }
+
+  &__heading {
+    margin-left: var(--horizontal-padding);
+  }
+
+  &__button {
+    margin-right: var(--horizontal-padding);
   }
 }
 
