Fix tab switching to preserve a smooth transition
The position of the text group, button, and tab list remains the same
despite the number of lines in the body changing between different tabs.
This removes the jarring shift in element position on tab switching

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -262,9 +262,9 @@
   &__container {
     display: flex;
 
-    gap: 65px;
+    height: 468px;
 
-    justify-self: end;
+    justify-content: space-between;
 
     flex-direction: column;
   }
@@ -300,6 +300,11 @@
 
     top: 122px;
     left: calc(var(--horizontal-padding) - 40px);
+  }
+
+  &__button {
+    position: absolute;
+    top: 447px;
   }
 
   &__list {
