--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,15 +67,19 @@
 }
 
 .hero {
-  $height: 820px;
-  height: $height;
+  min-height: 820px;
 
   padding-top: 65px;
+
+  &__logo {
+    position: relative;
+    z-index: 1;
+  }
 
   &__crop {
     position: absolute;
 
-    width: 58%;
+    width: min(100%, 895px);
     height: 100%;
 
     top: 0;
@@ -83,10 +87,12 @@
   }
 
   &__image {
-    height: $height;
+    height: 100%;
     position: absolute;
     top: 0;
     right: 0;
+
+    filter: contrast(93%) saturate(92%);
   }
 
   &__text-group {
@@ -94,6 +100,10 @@
 
     margin-top: 153px;
     margin-bottom: 40px;
+  }
+
+  &__button {
+    position: relative;
   }
 }
 
