--- a/src/styles.scss
+++ b/src/styles.scss
@@ -153,26 +153,30 @@
 }
 
 .locally-sourced {
-  height: 761px;
+  height: 782px;
+
+  display: flex;
+
+  justify-content: space-between;
+  align-items: center;
+
+  gap: 50px;
 
   &__text-group {
-    position: absolute;
+    position: relative;
 
-    top: 50%;
-    transform: translateY(-10%);
-    left: var(--horizontal-padding);
+    top: 88.5px;
   }
 
   &__crop {
-    position: absolute;
+    position: relative;
 
     z-index: 1;
 
-    width: min(540px, calc(50% - var(--horizontal-padding) - 15px));
-    height: 720px;
+    max-width: min(50%, 540px);
+    aspect-ratio: 540/720;
 
-    bottom: -80px;
-    right: var(--horizontal-padding);
+    top: 109px;
   }
 
   &__image {
