--- a/src/styles.scss
+++ b/src/styles.scss
@@ -638,6 +638,11 @@ main {
 
   box-shadow: 0 75px 100px -50px rgba(56, 66, 85, 0.5032);
 
+  & *[invalid] {
+    color: var(--error-red);
+    border-color: var(--error-red);
+  }
+
   &__required-label-group {
     display: flex;
     flex-direction: column;
@@ -657,6 +662,10 @@ main {
     &_offset {
       top: 50px;
       left: 16px;
+    }
+
+    &[invalid] {
+      visibility: visible;
     }
   }
 
