--- a/src/styles.scss
+++ b/src/styles.scss
@@ -670,11 +670,61 @@ main {
   }
 
   &__dropdown {
-    appearance: none;
-    background-image: url("./assets/icons/icon-arrow.svg");
-    background-repeat: no-repeat;
-    background-position: calc(100% - 16px) calc(50% - 2px);
-    background-size: 16px 8px;
+    position: relative;
+
+    display: flex;
+    align-items: center;
+  }
+
+  &__dropdown-icon {
+    position: absolute;
+    width: 16px;
+    height: 8px;
+    right: 0;
+    top: 50%;
+    transform: translate(-16px, calc(-50% - 2px));
+
+    &[data-open] {
+      transform: translate(-16px, calc(-50% - 2px)) rotate(180deg);
+    }
+  }
+
+  &__dropdown-list {
+    display: flex;
+    flex-direction: column;
+
+    gap: 16px;
+
+    z-index: 2;
+
+    list-style: none;
+    width: 106px;
+    position: absolute;
+    background-color: white;
+    box-shadow: 0px 15px 25px rgba(56, 66, 85, 0.2462);
+
+    padding: 18px 30px 13px 0;
+
+    left: 0;
+    bottom: -115px;
+
+    &[data-inactive] {
+      display: none;
+    }
+  }
+
+  &__dropdown-item {
+    width: 60px;
+    text-align: right;
+    &[data-selected] {
+      background-image: url("./assets/icons/icon-check.svg");
+      background-repeat: no-repeat;
+      background-position: 16px 8px;
+      background-size: 10.43px 7.66px;
+    }
+
+    &__dropdown-list[data-inactive] &[data-selected] {
+    }
   }
 
   &__input {
@@ -685,6 +735,8 @@ main {
 
     border: none;
     border-bottom: 1px solid #8e8e8e;
+
+    caret-color: var(--beaver);
 
     &:focus {
       outline: none;
