--- a/src/styles.scss
+++ b/src/styles.scss
@@ -841,3 +841,69 @@ main {
   height: 40px;
   width: auto;
 }
+
+@media (max-width: 1100px) {
+  .text {
+    &_heading_xl {
+      font-size: 48px;
+      line-height: 64px;
+      letter-spacing: -0.6px;
+    }
+  }
+
+  .text-group {
+    &_size_hero > &__heading {
+      max-width: 14ch;
+      margin-bottom: 20px;
+    }
+
+    &_size_hero > &__body {
+      max-width: 50ch;
+      margin-bottom: 0px;
+    }
+  }
+
+  .hero {
+    height: 992px;
+
+    display: flex;
+
+    flex-direction: column;
+    align-items: center;
+
+    &__logo {
+      margin-top: 310px;
+      position: static;
+    }
+
+    &__crop {
+      width: 100%;
+      height: 373px;
+    }
+
+    &__image {
+      width: 100%;
+      height: auto;
+
+      filter: contrast(93%) saturate(92%);
+    }
+
+    &__text-group {
+      display: flex;
+      flex-direction: column;
+
+      align-items: center;
+
+      position: static;
+
+      text-align: center;
+
+      margin-top: 38px;
+      margin-bottom: 52px;
+    }
+
+    &__button {
+      position: static;
+    }
+  }
+}
