--- a/src/styles.scss
+++ b/src/styles.scss
@@ -843,22 +843,36 @@ main {
 }
 
 @media (max-width: 1100px) {
+  :root {
+    --horizontal-padding: 98px;
+  }
+
   .text {
     &_heading_xl {
       font-size: 48px;
       line-height: 64px;
       letter-spacing: -0.6px;
     }
+
+    &_heading_l {
+      font-size: 48px;
+      line-height: 48px;
+      letter-spacing: -0.5px;
+    }
   }
 
   .text-group {
+    &__divide-pattern {
+      margin-bottom: 42px;
+    }
+
     &_size_hero > &__heading {
       max-width: 14ch;
       margin-bottom: 20px;
     }
 
     &_size_hero > &__body {
-      max-width: 50ch;
+      max-width: 100%;
       margin-bottom: 0px;
     }
   }
@@ -884,8 +898,6 @@ main {
     &__image {
       width: 100%;
       height: auto;
-
-      filter: contrast(93%) saturate(92%);
     }
 
     &__text-group {
@@ -904,6 +916,61 @@ main {
 
     &__button {
       position: static;
+    }
+  }
+
+  .enjoyable-place {
+    height: 697px;
+
+    display: flex;
+
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
+
+    gap: 56px;
+
+    &__text-group {
+      position: relative;
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+
+      transform: translate(0, -106px);
+    }
+
+    &__crop {
+      position: static;
+
+      transform: translate(0, -106px);
+
+      max-width: 100%;
+      aspect-ratio: 573/360;
+
+      box-shadow: 0 75px 100px -50px rgba(56, 66, 85, 0.5032);
+
+      z-index: 1;
+    }
+
+    &__image {
+      width: 100%;
+      height: auto;
+
+      transform: translate(0px, 0px);
+    }
+
+    &__top-right-pattern {
+      position: absolute;
+
+      width: auto;
+      height: auto;
+
+      left: -517px;
+      top: 100px;
+      bottom: 0px;
     }
   }
 }
