Style the tablet highlights section

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1031,4 +1031,70 @@ main {
       transform: translateY(0%);
     }
   }
+
+  .highlights {
+    height: 891px;
+
+    display: flex;
+
+    flex-direction: column;
+    align-items: center;
+
+    gap: 54px;
+
+    &__text-group {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      margin-top: 96px;
+      text-align: center;
+    }
+
+    &__image {
+      width: 128px;
+      height: auto;
+
+      margin-right: 62px;
+    }
+
+    &__list {
+      flex-shrink: 1;
+
+      display: flex;
+      flex-direction: column;
+
+      gap: 24px;
+
+      margin-top: 0px;
+
+      margin-bottom: 120px;
+    }
+
+    &__item {
+      display: flex;
+
+      align-items: center;
+    }
+
+    &__item-heading {
+      position: relative;
+    }
+
+    &__list-divider {
+      width: 100%;
+
+      border-bottom: 1px solid var(--ebony-clay);
+    }
+
+    &__line-pattern {
+      width: 32px;
+      height: calc(50% - 1px);
+
+      position: absolute;
+      left: -62px;
+
+      border-bottom: 1px solid var(--beaver);
+    }
+  }
 }
