--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,28 +1,3 @@
-@font-face {
-  font-family: "League Spartan";
-  font-weight: 300;
-  src: url("./assets/fonts/static/LeagueSpartan-Light.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "League Spartan";
-  font-weight: 400;
-  src: url("./assets/fonts/static/LeagueSpartan-Regular.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "League Spartan";
-  font-weight: 600;
-  src: url("./assets/fonts/static/LeagueSpartan-SemiBold.ttf")
-    format("truetype");
-}
-
-@font-face {
-  font-family: "League Spartan";
-  font-weight: 700;
-  src: url("./assets/fonts/static/LeagueSpartan-Bold.ttf") format("truetype");
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -31,86 +6,91 @@
 }
 
 .text {
-  color: var(--ebony-clay);
+  color: var(--colour-ebony-clay);
+  font-family: "League Spartan";
 
   &_white {
     color: white;
   }
 
   &_heading_s {
-    font-family: "League Spartan";
-    font-weight: 600;
-    font-size: 17px;
-    line-height: 28px;
-    letter-spacing: 2.5px;
+    background-color: red;
+    font-weight: var(--weight-semi-bold);
+    font-size: var(--size-m);
+    line-height: var(--line-height-s);
+    letter-spacing: var(--letter-spacing-2xl);
   }
 
   &_heading_m {
-    font-family: "League Spartan";
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 24px;
-    letter-spacing: -0.25px;
+    background-color: orange;
+    font-weight: var(--weight-bold);
+    font-size: var(--size-l);
+    line-height: var(--line-height-2xs);
+    letter-spacing: var(--letter-spacing-m);
   }
 
   &_heading_l {
-    font-family: "League Spartan";
-    font-weight: 700;
-    font-size: 48px;
-    line-height: 48px;
-    letter-spacing: -0.5px;
+    background-color: green;
+    font-weight: var(--weight-bold);
+    font-size: var(--size-2xl);
+    line-height: var(--line-height-xl);
+    letter-spacing: var(--letter-spacing-xs);
   }
 
   &_heading_xl {
-    font-family: "League Spartan";
-    font-weight: 300;
-    font-size: 80px;
-    line-height: 80px;
-    letter-spacing: -1px;
+    background-color: brown;
+    font-weight: var(--weight-light);
+    font-size: var(--size-3xl);
+    line-height: var(--line-height-3xl);
+    letter-spacing: var(--letter-spacing-3xs);
   }
 
   &_heading_footer {
-    font-family: "League Spartan";
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 28px;
-    letter-spacing: 2px;
+    background-color: burlywood;
+    font-weight: var(--weight-regular);
+    font-size: var(--size-xs);
+    line-height: var(--line-height-s);
+    letter-spacing: var(--letter-spacing-xl);
   }
 
   &_body_1 {
-    font-family: "League Spartan";
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 30px;
+    background-color: pink;
+    font-weight: var(--weight-regular);
+    font-size: var(--size-l);
+    line-height: var(--line-height-m);
+    letter-spacing: var(--letter-spacing-zero);
   }
 
   &_body_2 {
-    font-family: "League Spartan";
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 26px;
+    background-color: violet;
+    font-weight: var(--weight-regular);
+    font-size: var(--size-s);
+    line-height: var(--line-height-xs);
+    letter-spacing: var(--letter-spacing-zero);
   }
 
   &_form_1 {
-    font-family: "League Spartan";
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 28px;
+    background-color: palegoldenrod;
+    font-weight: var(--weight-regular);
+    font-size: var(--size-l);
+    line-height: var(--line-height-s);
+    letter-spacing: var(--letter-spacing-zero);
   }
 
   &_form_2 {
-    font-family: "League Spartan";
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 24px;
-    letter-spacing: -0.25px;
+    background-color: palegreen;
+    font-weight: var(--weight-bold);
+    font-size: var(--size-l);
+    line-height: var(--line-height-2xs);
+    letter-spacing: var(--letter-spacing-m);
   }
 
   &_form_3 {
-    font-family: "League Spartan";
-    font-weight: 400;
-    font-size: 10px;
-    letter-spacing: -0.13px;
+    background-color: paleturquoise;
+    font-weight: var(--weight-regular);
+    font-size: var(--size-2xs);
+    line-height: var(--size-2xs);
+    letter-spacing: var(--letter-spacing-l);
   }
 }
 
@@ -163,13 +143,6 @@
   --t: calc(100vw - 1240px) / calc(1440 - 1240);
   --horizontal-padding: clamp(65px, 65px + var(--t) * (165 - 65), 165px);
 
-  --beaver: #9e7f66;
-  --mirage: #17192b;
-  --cod-gray: #111111;
-  --ebony-clay: #242b37;
-  --shuttle-gray: #5c6779;
-  --error-red: #b54949;
-
   background: #aaa;
 }
 
@@ -178,12 +151,12 @@
   height: 64px;
 
   background: none;
-  border: 1px solid var(--cod-gray);
-  color: var(--cod-gray);
+  border: 1px solid var(--colour-cod-gray);
+  color: var(--colour-cod-gray);
 
   &:hover {
     color: white;
-    background: var(--cod-gray);
+    background: var(--colour-cod-gray);
     cursor: pointer;
   }
 
@@ -193,20 +166,20 @@
       color: white;
 
       &:hover {
-        color: var(--mirage);
+        color: var(--colour-mirage);
         background: white;
       }
     }
 
     &_invert {
       color: white;
-      background: var(--cod-gray);
+      background: var(--colour-cod-gray);
       cursor: pointer;
 
       &:hover {
         background: white;
-        border: 1px solid var(--cod-gray);
-        color: var(--cod-gray);
+        border: 1px solid var(--colour-cod-gray);
+        color: var(--colour-cod-gray);
       }
     }
   }
@@ -231,7 +204,7 @@ main {
   padding: 0 var(--horizontal-padding);
 
   &_dark {
-    background: var(--cod-gray);
+    background: var(--colour-cod-gray);
   }
 }
 
@@ -421,7 +394,7 @@ main {
   &__list-divider {
     width: 100%;
 
-    border-bottom: 1px solid var(--ebony-clay);
+    border-bottom: 1px solid var(--colour-ebony-clay);
   }
 
   &__line-pattern {
@@ -431,7 +404,7 @@ main {
     position: absolute;
     left: -62px;
 
-    border-bottom: 1px solid var(--beaver);
+    border-bottom: 1px solid var(--colour-beaver);
   }
 }
 
@@ -533,7 +506,7 @@ main {
     }
 
     &:hover {
-      color: var(--ebony-clay);
+      color: var(--colour-ebony-clay);
 
       cursor: pointer;
     }
@@ -547,7 +520,7 @@ main {
     transform: rotate(180deg);
     transform-origin: left;
 
-    border-bottom: 1px solid var(--beaver);
+    border-bottom: 1px solid var(--colour-beaver);
 
     z-index: 0;
 
@@ -644,8 +617,8 @@ main {
   box-shadow: 0 75px 100px -50px rgba(56, 66, 85, 0.5032);
 
   & *[invalid] {
-    color: var(--error-red);
-    border-color: var(--error-red);
+    color: var(--colour-error-red);
+    border-color: var(--colour-error-red);
   }
 
   &__required-label-group {
@@ -658,7 +631,7 @@ main {
   &__required {
     visibility: hidden;
     position: absolute;
-    color: var(--error-red);
+    color: var(--colour-error-red);
 
     top: 30px;
 
@@ -738,7 +711,7 @@ main {
     border: none;
     border-bottom: 1px solid #8e8e8e;
 
-    caret-color: var(--beaver);
+    caret-color: var(--colour-beaver);
 
     &:focus {
       outline: none;
@@ -842,6 +815,33 @@ main {
   width: auto;
 }
 
+@media (max-width: 0px) {
+  :root {
+    --horizontal-padding: 24px;
+  }
+
+  .text {
+    &_heading_xl {
+      font-size: var(--size-2xl);
+      line-height: var(--line-height-l);
+      letter-spacing: var(--letter-spacing-s);
+    }
+
+    &_heading_l {
+      font-size: var(--size-xl);
+      line-height: var(--line-height-l);
+      letter-spacing: var(--letter-spacing-s);
+    }
+
+    &_body_1 {
+      background-color: pink;
+      font-size: var(--size-s);
+      line-height: var(--line-height-xs);
+      letter-spacing: var(--letter-spacing-zero);
+    }
+  }
+}
+
 @media (max-width: 1100px) {
   :root {
     --horizontal-padding: 98px;
@@ -849,15 +849,9 @@ main {
 
   .text {
     &_heading_xl {
-      font-size: 48px;
-      line-height: 64px;
-      letter-spacing: -0.6px;
-    }
-
-    &_heading_l {
-      font-size: 48px;
-      line-height: 48px;
-      letter-spacing: -0.5px;
+      font-size: var(--size-2xl);
+      line-height: var(--line-height-2xl);
+      letter-spacing: var(--letter-spacing-2xs);
     }
   }
 
@@ -1089,7 +1083,7 @@ main {
     &__list-divider {
       width: 100%;
 
-      border-bottom: 1px solid var(--ebony-clay);
+      border-bottom: 1px solid var(--colour-ebony-clay);
     }
 
     &__line-pattern {
@@ -1099,7 +1093,7 @@ main {
       position: absolute;
       left: -62px;
 
-      border-bottom: 1px solid var(--beaver);
+      border-bottom: 1px solid var(--colour-beaver);
     }
   }
 
@@ -1220,7 +1214,7 @@ main {
       }
 
       &:hover {
-        color: var(--ebony-clay);
+        color: var(--colour-ebony-clay);
 
         cursor: pointer;
       }
@@ -1231,7 +1225,7 @@ main {
 
       width: 48px;
 
-      border-bottom: 1px solid var(--beaver);
+      border-bottom: 1px solid var(--colour-beaver);
 
       z-index: 0;
 
